# macrocert

./: .gitignore  ARCHITECTURE.md  HANDOFF.md  README.md  RESEARCH_PROPOSAL.md  SETUP.md  pixi.toml  proposal.md  pyproject.toml
data/: energetics_protocol.yaml  pre_registration.template.yaml
docs/: INDEX.md  M5_REPORT_ascomylactam_a.md  M5_REPORT_corey_erythronolide_b_macrolactonization_1978.md  M5_REPORT_epothilone_b_nicolaou_rcm_1997.md  M5_REPORT_haidle_myers_cytochalasin_b_2004.md  M5_REPORT_lactam_12_from_11_aminoundecanoic_acid.md  M5_REPORT_lactone_14_from_13_hydroxytridecanoic_acid.md  M5_REPORT_phoenix_reddy_cassaine_tda_2008.md  M5_REPORT_rcm_15_from_heptadecadiene.md  M5_REPORT_trost_bryostatin_analogue_rcm_2007.md  M5_REPORT_vancomycin_cde_ring_boger_snar.md  adversarial_verifier_expansion.md  adversarial_verifier_roadmap.md  ascomylactam_a_encoding.md  biaryl_etherification_research.md  c_h_dehydrogenative_research.md  c_h_encoding_and_energetics_protocol.md  cassaine_m5.md  cross_coupling_and_cache_fix.md  cross_coupling_research.md  cytochalasin_b_m5.md  energetics_protocol_research.md  energetics_ts_search_landed.md  epothilone_b_m5.md  erythronolide_b_m5.md  hwe_olefination_research.md  macroetherification_research.md  macrolactonization_research.md  mod_abort_investigation.md  mod_patch_build_validation.md  mod_stereo_reference.md  stereo_encoding_procedure.md  trost_bryostatin_m5.md  ts_cache_landed.md  vancomycin_cd_m5.md  workstream_d_phase2.md  workstream_d_phase3.md  workstream_d_predicates.md  workstream_f_alpha_c_overlays.md  (+3 more)
(+241 files in other folders)
